Correction version tablette + mobile

--- a/Resto1/CSS/Style.scss
+++ b/Resto1/CSS/Style.scss
@@ -258,10 +258,13 @@ body {
 		margin-left: 0px;
 		font-size: 13px;
 		z-index: 1;
-		&:hover {
+		&:active {
 			transform: scaleX(0.90);
 			transform-origin: left;
 			transition: transform 0.3s ease;
+		}
+		&:hover {
+			pointer-events: none;
 		}
 	}
 	h5 {
@@ -449,15 +452,19 @@ body {
 		width: 100%;
 		height: 1275px;
 		margin-left: 0;
-		h2 {
-			width: 341px;
+		.cardtitle {
+			display: flex;
+			justify-content: center;
+			width: 100%;
 			font-weight: 400;
 			font-family: $font-family_1;
 			padding-left: 17px;
 			padding-top: 31px;
 		}
+		h2 {
+			margin-top: 0px;
+		}
 		h5 {
-			padding-top: 40px;
 			margin-left: 10px;
 			width: 13%;
 		}
@@ -481,6 +488,56 @@ body {
 		.like {
 			margin-top: 16px;
 		}
+	}
+
+	.cardcontainer {
+		width: 100%;
+		  margin-left: 0px;
+		  margin-right: 36px;
+		z-index: 99;
+			.animation {
+				background-color: $anim-color;
+				color: $color_3;
+				width: 70px;
+				height: 59px;
+				position: absolute;
+				align-items: center;
+				display: flex;
+				justify-content: center;
+				border-top-right-radius: 15px;
+				border-bottom-right-radius: 15px;
+				z-index: -1;
+				left: 84.9%;
+			}
+			.cardanim3 {
+				bottom: 66.4%;
+				width: 70px;
+				height: 59px;
+	}
+			.cardanim2 {
+				bottom: 73.6%;
+	}
+			.cardanim {
+				bottom: 80.7%;
+	}
+			.cardanim4{
+				bottom: 53.4%;
+			}
+			.cardanim5 {
+				bottom: 46.4%;
+			}
+			.cardanim6{
+				bottom: 39%;
+			}
+			.cardanim7 {
+				bottom: 26.3%;
+			}
+			.cardanim8 {
+				bottom: 19.1%;
+			}
+			.cardanim9 {
+				bottom: 11.7%;
+			}
 	}
 	.euro {
 		justify-content: right;
@@ -559,6 +616,12 @@ body {
 				margin-top: 0px;
   				margin-bottom: 0px;
 			}
+		}
+		.BoxFooter{
+			display: flex;
+			flex-direction: column;
+			padding-left: 30px;
+			gap: 10px;
 		}
 }
 }
